demos/k8s-demo/tumblr-sidecar-injection/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "k8s-sidecar-injector-prod"
  namespace: "kube-system"
  labels:
    k8s-app: "k8s-sidecar-injector"
    track: "prod"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: "k8s-sidecar-injector"
        track: "prod"
    spec:
      serviceAccountName: k8s-sidecar-injector
      volumes:
      - name: secrets
        secret:
          secretName: k8s-sidecar-injector-certs
      containers:
      - name: "k8s-sidecar-injector"
        imagePullPolicy: Always
        image: tumblr/k8s-sidecar-injector:latest
        command: ["entrypoint.sh"]
        args: []
        ports:
        - name: https
          containerPort: 9443
        - name: http-metrics
          containerPort: 9000
        volumeMounts:
        - name: secrets
          mountPath: /var/lib/secrets
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "0.5"
            memory: 2Gi
