demos/k8s-demo/tumblr-sidecar-injection/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: "tumblr-sidecar-injector-webhook"
  labels:
    app: k8s-sidecar-injector
    track: prod
webhooks:
- name: "injector.tumblr.com"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    # https://github.com/kubernetes/kubernetes/blob/v1.10.0-beta.1/staging/src/k8s.io/api/admissionregistration/v1beta1/types.go#L218
    # note: k8s is smart enough to use 443 or the only exposed port on the service
    # note: this requires the service to serve TLS directly (not thru ingress)
    service:
      name: "k8s-sidecar-injector-prod"
      namespace: "kube-system"
      path: "/mutate"   # what /url/slug to send requests at
    # Demo/Tutorial only cabundle, generate your own for production,
    # see https://github.com/tumblr/k8s-sidecar-injector/blob/master/docs/tls.md
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZsRENDQTN3Q0NRQ0Vpb1g3a1hlSWVUQU5CZ2txaGtpRzl3MEJBUXNGQURDQmlqRUxNQWtHQTFVRUJoTUMKVlVzeER6QU5CZ05WQkFnTUJreHZibVJ2YmpFVE1CRUdBMVVFQnd3S1EyaHBZMmhsYzNSbGNqRVJNQThHQTFVRQpDZ3dJZDJobGNtVnViM2N4SURBZUJnTlZCQU1NRjJzNGN5MXphV1JsWTJGeUxXbHVhbVZqZEc5eUxVTkJNU0F3CkhnWUpLb1pJaHZjTkFRa0JGaEZvZFdkb1FIZG9aWEpsYm05M0xtOXlaekFnRncweE9UQXpNRGt4TXpBeU5ETmEKR0E4ME56VTNNREl3TWpFek1ESTBNMW93Z1lveEN6QUpCZ05WQkFZVEFsVkxNUTh3RFFZRFZRUUlEQVpNYjI1awpiMjR4RXpBUkJnT [...]
